       This behavior matches that currently used by IE and Navigator.
    3. No order is guaranteed for parameters from forms, contrary to the HTML 4.01 spec
    4. No parameter validation is done for requests built from links

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
14-Nov-2001
Additions:
   1. ServletUnit now compiles against Servlet 2.3

Problems fixed:
   1. HttpUnit should now be more tolerant of missing character encodings

12-Nov-2001
Problems fixed:
   1. WebSphere cookie values ending with "=" or "==" are now handled.

 9-Nov-2001

Acknowledgements:
    Thanks to Dave Glowacki for finding and fixing another problem with parsing of link parameter names without values.

Problems Fixed:
    1. Links with parameters with no "=" were being treated as though they had "="

 8-Nov-2001
Acknowledgements:
    Thanks to Bradley Smith for implementing getParameterNames in ServletUnit.

Problems fixed:
   1. ServletUnit was not decoding its request parameters
   2. ServletUnit's HttpRequest.getParameterNames method was not implemented

Additions:
   1. ServletUnit now handles web.xml partially, supporting mapping of single paths to a servlet class
   2. Disabled submit buttons may no longer be selected from a form
   3. When enabled, parameter validation now prevents changes to readonly controls.
   4. It is now possible to obtain the reason message associated with the status code, either from
      HttpException.getResponseMessageweb() or if exceptions are disabled, from WebResponse.getResponseMessage()

 5-Nov-2001

Acknowledgements:
    Thanks to Oliver Imbusch for finding and fixing a problem with parsing of encoded link parameter names and values.
    Thanks to Paul Frantz for finding and fixing a problem with parsing of link parameter names without values.
    Thanks to Didier Besset for new WebForm methods: hasParameterNamed and hasParameterStartingWithPrefix

Problems Fixed: