@@ -14,8 +14,14 @@ Limitations:
 
 Revision History:
 14-Nov-2001
+Acknowledgements:
+    Thanks to Benoit Xhenseval for adding a mechanism to handle HTML parser errors.
+
 Additions:
    1. ServletUnit now compiles against Servlet 2.3
+   2. HttpUnitOptions now has methods addHtmlErrorListener and removeHtmlErrorListener. If a listener is registered,
+      it will be invoked for every error or warning generated by the parser, indicating the URL, line and column number
+      of the error and a textual description of the problem.
 
 Problems fixed:
    1. HttpUnit should now be more tolerant of missing character encodings
